# ai-practice-site

./: .gitignore  404.html  agent_output_20260204_130928.txt  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: deploy-docs.yml
career-framework/: index.html
career-framework/ai-engineering-manager-role/: index.html
career-framework/framing/: index.html
career-framework/redefine-data-ai-roles/: index.html
interview-process/: index.html
interview-process/assessment-details/: index.html
interview-process/implementation/: index.html
interview-process/process-overview/: index.html
interview-process/special-considerations/: index.html
interview-process/training-and-faq/: index.html
profession/: pyproject.toml
profession/ai-practice-profession/: agent_output_20260204_130619.txt  agent_output_20260204_130928.txt  index.md
profession/ai-practice-profession/career-framework/: ai-engineering-manager-role.md  framing.md  index.md  redefine-data-ai-roles.md
profession/ai-practice-profession/interview-process/: assessment-details.md  implementation.md  index.md  process-overview.md  special-considerations.md  training-and-faq.md
search/: search_index.json
