[project]
name = "profession-doc-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.4.8",
    "langfuse>=3.12.1",
    "litellm>=1.81.7",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
    "sqlalchemy>=2.0.46",
    "tenacity>=9.1.2",
]
